welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:15: error: 'while' expected but 'for' found.
		for{k<-(0 to ( getMondeHauteur()-1)).reverse}
                ^Diagonal:17: error: '(' expected but ';' found.
		for (y<-0 to k)
^Diagonal:29: error: illegal start of simple expression
}
^Diagonal:31: error: expected class or object definition
0.0
^Diagonal:33: error: expected class or object definition
0.1
^Diagonal:34: error: expected class or object definition
1.0
^Diagonal:36: error: expected class or object definition
0.2
^Diagonal:37: error: expected class or object definition
1.1
^Diagonal:38: error: expected class or object definition
2.0
^Diagonal:40: error: expected class or object definition
0.3
^Diagonal:41: error: expected class or object definition
1.3
^Diagonal:42: error: expected class or object definition
3.1
^Diagonal:43: error: expected class or object definition
3.0
^Diagonal:47: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:50: error: expected start of definition
	override def forward()  {
                 ^Diagonal:53: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:56: error: expected start of definition
	override def backward() {
                 ^Diagonal:59: error: Unmatched closing brace '}' ignored here
}
^