welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
var c:Int=0


			
	do {
		for{k<-0 to ( getMondeHauteur()-1)}
		
		for (y<-(0 to k).reverse)
		{
			setPos(k-y,y)
			ecritMessage(c)
			c=c+1
		}}
		for{k<-(0 to ( getMondeHauteur()-1)).reverse}
		
		for (y<-0 to k)
		{
			setPos(k-y,y)
			ecritMessage(c)
			c=c+1
		}}
		
	while (
		getX!=getMondeHauteur()-1
		&&
		getY!=getMondeHauteur()-1
		)
}

0.0

0.1
1.0

0.2
1.1
2.0

0.3
1.3
3.1
3.0
